reworked obu client handling, setting removal, status dashboard